Fix screen overflow problem

--- a/css/mainpage2.css
+++ b/css/mainpage2.css
@@ -168,6 +168,7 @@ body{
 	font-size: 15px;
     font-weight: 700;
     text-shadow: 0.15em 0.1em 1px #305351;
+    margin-bottom: -20px;
     animation: bounce 2s ease infinite;
 }
 
@@ -642,10 +643,6 @@ footer .copyrights{
 		transform: translateX(-15%);
 		font-size: 5px;
 	}
-}
-
-@media only screen and (max-width: 768px){
-
 }
 
 
